@@ -293,16 +293,8 @@ def includeme(cfg):
         'ptah-mustache-bundle', '/_mustache/{name}.js')
 
     # scan ptah
-    cfg.scan('ptah', ignore=('ptah.sockjs',))
+    cfg.scan('ptah')
     cfg.include('ptah.static')
-
-    # sockjs connection
-    try:
-        from .sockjs import register_ptah_sm
-        cfg.add_directive('ptah_init_sockjs', register_ptah_sm)
-        cfg.scan('ptah.sockjs')
-    except ImportError: # pragma: no cover
-        pass
 
     # translation
     cfg.add_translation_dirs('ptah:locale')
